Adding scaling to cluster
Signed-off-by: Petros Splinakis <petros.splinakis@oracle.com>

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>BlacklistService</module>
         <module>FinancialRecordsService</module>
         <module>FinancialRecordsServiceStub</module>
+        <module>HttpProxy</module>
     </modules>
 
     <dependencies>
